Added Col for large and small screen

--- a/app/Resume/resume.html
+++ b/app/Resume/resume.html
@@ -2,7 +2,7 @@
 <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 
-<div title="Vikas Kumar Sharma" class="col-md-12 container-fluid unselectable" style="background-color:#F5F3EE">
+<div title="Vikas Kumar Sharma" class="col-md-12 col-sm-12 col-lg-12 container-fluid unselectable" style="background-color:#F5F3EE">
     <div title="Contact" class="container-fluid border1 well bg-image">
         <div class="container-fluid padding-1 text-center">            
             <img src="/app/images/Vikas.jpg" height="200" width="200" class="img-circle img-responsive" style="display:inline" alt="Vikas">            
@@ -24,10 +24,10 @@
         {{$ctrl.summary}} 
     </div>
     <div title-="Summary" class="row">
-        <div class="col-md-3 bg-leftpane1">
+        <div class="col-md-3 col-sm-3 col-lg-3 bg-leftpane1">
             <u>Profile Summary</u>
         </div>
-        <div id="@demo" class="col-md-9 googlelato well-sm bg-3">
+        <div id="@demo" class="col-md-9 col-sm-9 col-lg-9 googlelato well-sm bg-3">
             <b>Develop creative application approaches by</b> blending analytical mindset, strong personable and leadership qualities, and lifelong passion for software solutions based on innovation and best practices that increase productivity, competitive edge, and cost effectiveness for both service providers and clients alike.
             <ul>
                 <li><b>Drive and lead cradle-to-grave software development lifecycles</b> including solution design, requirements validation, configuration management, deployment, release management, and follow-up support.</li>
@@ -43,10 +43,10 @@
             <em>Reputation as “people person who gets things done.” Adept at seeing point of view through other perspectives. Committed to ongoing professional and personal growth that supports high-quality deliverable performance.</em>
         </div>    
     <div title-="Career Milestones" class="row">
-        <div class="col-md-3 bg-leftpane1 container-fluid">
+        <div class="col-md-3 col-sm-3 col-lg-3 bg-leftpane1 container-fluid">
             <u>Career Milestones</u>
         </div>
-        <div class="col-md-9 container-fluid well-sm bg-3">
+        <div class="col-md-9 col-sm-9 col-lg-9 container-fluid well-sm bg-3">
             <span class="glyphicon glyphicon-check"></span> Slashed Azure product time-to-market metric from 30 days to 7 days by continuous delivery execution.<br />
             <span class="glyphicon glyphicon-check"></span> Drove and executed process-standardization initiative across Microsoft’s CPLA organization.<br />
             <span class="glyphicon glyphicon-check"></span> Received Project Manager of the Year award for turnaround leadership that restored customer confidence.
@@ -60,16 +60,16 @@
             Professional Experience
         </div>
         <div title="Wipro Technologies" class="row">
-            <div title="Wipro Summary" class="container-fluid col-md-12 bg-centertext2 text-left well-sm">
+            <div title="Wipro Summary" class="container-fluid col-md-12 col-sm-12 col-lg-12 bg-centertext2 text-left well-sm">
                 <strong>Wipro Technologies</strong>----A global provider of IT products and services. $8B+ in annual revenues; 165K+ employees worldwide.<br />
                 Hired by Wipro in Hyderabad, India for MS technology expertise that aligned with requisite skills of client-facing role in serving Microsoft Corporation. Initially provided key QA contributions and advanced through positions of increasing leadership responsibilities and authority, culminating as application-development project leader.<br />
                 <span class="glyphicon glyphicon-check"></span>Reassigned upon specific request by Microsoft Entitlements project space of after delivering <b>award-winning leadership performance</b> in architecting turnaround of off-track project.
             </div>
             <div title="CPLA Entitlements" class="row">
-                <div title="CPLA Entitlements" class="container-fluid col-md-3 bg-leftpane2 well-sm">
+                <div title="CPLA Entitlements" class="container-fluid col-md-3 col-sm-3 col-lg-3 bg-leftpane2 well-sm">
                     Project Manager, CPLA Entitlements ▪ Microsoft Corporation ▪ Redmond, WA (10/2015–Present)
                 </div>
-                <div title="Entitlements Summary" class="container-fluid col-md-9 bg-3 well-sm">
+                <div title="Entitlements Summary" class="container-fluid col-md-9 col-sm-9 col-lg-9 bg-3 well-sm">
                     <span class="glyphicon glyphicon-check"></span><b>Spearheaded initiatives that automated key components of application-development process</b> including build and release definitions for continuous delivery in DevOPS model, optimized time used in hands-on project management involvement, and created self-serve report capabilities. Led 11-person team in USA and India.
                     <ul>
                         <li><b>Originated mission statement and defined success attributes that enabled monthly product launches</b> for Microsoft’s CPLA volume-licensing customers including product and authentication-key downloads.</li>
@@ -86,10 +86,10 @@
                 </div>
             </div>
             <div title="CPLA Agreements" class="row">
-                <div title="CPLA Agreements" class="container-fluid col-md-3 bg-leftpane2 well-sm">
+                <div title="CPLA Agreements" class="container-fluid col-md-3 col-sm-3 col-lg-3 bg-leftpane2 well-sm">
                     Project Lead, CPLA Agreements ▪ Microsoft Corporation ▪ Redmond, WA (06/2013–10/2015)
                 </div>
-                <div title="Agreements Summary" class="container-fluid col-md-9 bg-3 well-sm">
+                <div title="Agreements Summary" class="container-fluid col-md-9 col-sm-9 col-lg-9 bg-3 well-sm">
                     <span class="glyphicon glyphicon-check"></span><b>Transformed CPLA Agreements space</b> from manual-intensive, error-prone annual program into automated quarterly program that <b>slashed needed man-hours and error rate.</b> Led 13-person team in USA and India. <br />
                     <ul>
                         <li>Developed web application that automated document production and printing runs, driving continual process improvements through test strategies and automations.</li>
@@ -99,10 +99,10 @@
                 </div>
             </div>
             <div title="Quoting Applications" class="row">
-                <div title="Quoting Applications" class="container-fluid col-md-3 bg-leftpane2 well-sm">
+                <div title="Quoting Applications" class="container-fluid col-md-3 col-sm-3 col-lg-3 bg-leftpane2 well-sm">
                     Test Lead, VL Quoting Applications ▪ Microsoft Corporation ▪ Hyderabad India (10/2010–06/2013)
                 </div>
-                <div title="QA Summary" class="container-fluid col-md-9 bg-3 well-sm">
+                <div title="QA Summary" class="container-fluid col-md-9 col-sm-9 col-lg-9 bg-3 well-sm">
                     <span class="glyphicon glyphicon-check"></span><b>Spearheaded Wipro’s acquisition of added Microsoft projects</b> through quality releases. Led 6-person team. Defined uniform end-user and database testing standards and sourced team to implement testing standards. <br />
                     <ul>
                         <li>Articulated project goals and scope for team members. Translated business needs into technical terms, prepared  work-breakdown structures (WBS), and instilled culture of shared accountability.</li>
@@ -111,23 +111,23 @@
                 </div>
             </div>
             <div title="MGO" class="row">
-                <div title="MGO NextGen" class="container-fluid col-md-3 bg-leftpane2 well-sm">
+                <div title="MGO NextGen" class="container-fluid col-md-3 col-sm-3 col-lg-3 bg-leftpane2 well-sm">
                     Test Lead & Developer, MGO Next Gen ▪ Microsoft Corporation ▪ Hyderabad India (04/2010–10/2010)
                 </div>
-                <div title="MGO Summary" class="container-fluid col-md-9 bg-3 well-sm">
+                <div title="MGO Summary" class="container-fluid col-md-9 col-sm-9 col-lg-9 bg-3 well-sm">
                     <span class="glyphicon glyphicon-check"></span><b>Delivered new web application as test lead</b>while contributing as developer. Led 3-person team.
                 </div>
             </div>
         </div>
         <div title="SumTotal Systems" class="row">
-            <div title="SumTotal Summary" class="container-fluid col-md-12 bg-centertext2 well-sm">
+            <div title="SumTotal Summary" class="container-fluid col-md-12 col-sm-12 col-lg-12 bg-centertext2 well-sm">
                 <strong>SumTotal Systems</strong> Hyderabad, India ▪ 2005–2010 <br />
                     A globally-based provider of learning- and performance-based talent management solutions.                
             </div>
-            <div title="Talent Management System" class="container-fluid col-md-3 bg-leftpane2">
+            <div title="Talent Management System" class="container-fluid col-md-3 col-sm-3 col-lg-3 bg-leftpane2">
                 Talent Management Systems
             </div>
-            <div title="TMS Summary" class="container-fluid col-md-9 bg-3">
+            <div title="TMS Summary" class="container-fluid col-md-9 col-sm-9 col-lg-9 bg-3">
                 <b>Senior Software Engineer, Performance Appraisal Systems</b>
                 <ul>
                     <li>Collaborated in functional specification and design discussions, representing 10-person QA team.</li>
@@ -146,10 +146,10 @@
         </div>
     </div>
     <div title="Education" class="row">
-        <div class="col-md-12 container-fluid text-center bg-centertext1">
+        <div class="col-md-12 col-sm-12 col-lg-12 container-fluid text-center bg-centertext1">
             Education, Certifications & Professional Development 
         </div>
-        <div class="col-md-12 container-fluid bg-3">
+        <div class="col-md-12 col-sm-12 col-lg-12 container-fluid bg-3">
             <b>Master of Computer Applications</b> (MCA) ▪ Uttar Pradesh Technical University ▪ Ghaziabad, India<br />
             <b>Diploma in Advanced Computing</b> ▪ Centre for Development of Advanced Computing (C-DAC) ▪ Hyderabad, India<br />
             <b>Wipro Training:</b> Project Management Certification Program (PMCP) | Project Lead Certification program(PLCP)<br />
