Added Collapsible panel

--- a/app/Resume/resume.html
+++ b/app/Resume/resume.html
@@ -1,6 +1,13 @@
 ﻿<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lato" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<div class=panel-group>
 
 <div title="Vikas Kumar Sharma" class="col-md-12 col-sm-12 col-lg-12 container-fluid unselectable" style="background-color:#F5F3EE">
     <div title="Contact" class="container-fluid border1 well bg-image">
@@ -23,7 +30,14 @@
         {{$ctrl.myResume}} -
         {{$ctrl.summary}} 
     </div>
-    <div title-="Summary" class="row">
+    <div class=panel panel-default>
+	<div class=panel-heading>
+	<h4 class="panel-title">
+          <a data-toggle="collapse" href="#collapse1">Profile Summary</a>
+    </h4>
+	</div>
+	<div id="collapse1" class="panel-collapse collapse">
+	<div title-="Summary" class="row">
         <div class="col-md-3 col-sm-3 col-lg-3 bg-leftpane1">
             <u>Profile Summary</u>
         </div>
@@ -38,7 +52,9 @@
                 <li><b>Recruit, lead, mentor, and influence</b> application development teams to achieve peak productivity and performance while providing opportunities for professional development and succession management.</li>
             </ul>   
         </div>
-    </div>    
+    </div> 
+</div>	
+	</div>
         <div title="Me" class="container-fluid row border1 bg-centertext3  text-center well-sm" style="color:brown">
             <em>Reputation as “people person who gets things done.” Adept at seeing point of view through other perspectives. Committed to ongoing professional and personal growth that supports high-quality deliverable performance.</em>
         </div>    
@@ -159,4 +175,4 @@
         </div>
     </div>
 </div>
-
+</div>
