--- a/app/Resume/resume.html
+++ b/app/Resume/resume.html
@@ -8,9 +8,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
-
-<div title="Vikas Kumar Sharma" class="col-md-12 col-sm-12 col-lg-12 container-fluid unselectable" style="background-color:#F5F3EE">
-    <div title="Contact" class="container-fluid border1 well bg-image">
+<div class=panel-group>
+<div title="Vikas Kumar Sharma" class="col-md-12 col-sm-12 col-lg-12 container-fluid unselectable panel" style="background-color:#F5F3EE">
+    <div class=panel>
+	<div title="Contact" class="container-fluid border1 well bg-image">
         <div class="container-fluid padding-1 text-center">            
             <img src="/app/images/Vikas.jpg" height="200" width="200" class="img-circle img-responsive" style="display:inline" alt="Vikas">            
         </div>
@@ -30,8 +31,8 @@
         {{$ctrl.myResume}} -
         {{$ctrl.summary}} 
     </div>
-<div class=panel-group>
-    <div class=panel panel-default>
+</div>
+    <div class=panel>
 	<div class=panel-heading>
 	<h4 class="panel-title">
           <a data-toggle="collapse" href="#collapse1">Profile Summary</a>
