--- a/app/Resume/resume.html
+++ b/app/Resume/resume.html
@@ -35,10 +35,10 @@
     <div class=panel>
 	<div class=panel-heading>
 	<h4 class="panel-title">
-          <a data-toggle="collapse" href="#collapse1">Profile Summary</a>
+          <a data-toggle="collapse" href="#!profilecollapse">Profile Summary</a>
     </h4>
 	</div>
-	<div id="collapse1" class="panel-collapse collapse">
+	<div id="profilecollapse" class="panel-collapse collapse">
 	<div title-="Summary" class="row">
         <div class="col-md-3 col-sm-3 col-lg-3 bg-leftpane1">
             <u>Profile Summary</u>
