--- a/app/Resume/resume.html
+++ b/app/Resume/resume.html
@@ -35,7 +35,7 @@
     <div class=panel>
 	<div class=panel-heading>
 	<h4 class="panel-title">
-          <a data-toggle="collapse" href="#!profilecollapse">Profile Summary</a>
+          <a data-toggle="collapse" href="#profilecollapse" target=_self>Profile Summary</a>
     </h4>
 	</div>
 	<div id="profilecollapse" class="panel-collapse collapse">
