--- a/app/Resume/resume.html
+++ b/app/Resume/resume.html
@@ -43,7 +43,8 @@
         <!-- <div class="col-md-3 col-sm-3 col-lg-3 bg-leftpane1"> -->
             <!-- <u>Profile Summary</u> -->
         <!-- </div> -->
-        <div id="@demo" class="col-md-12 col-sm-12 col-lg-12 googlelato well-sm bg-3">
+        <!-- <div id="@demo" class="col-md-12 col-sm-12 col-lg-12 googlelato well-sm bg-3"> -->
+		<div id="@demo" class="googlelato well-sm bg-3">
             <b>Develop creative application approaches by</b> blending analytical mindset, strong personable and leadership qualities, and lifelong passion for software solutions based on innovation and best practices that increase productivity, competitive edge, and cost effectiveness for both service providers and clients alike.
             <ul>
                 <li><b>Drive and lead cradle-to-grave software development lifecycles</b> including solution design, requirements validation, configuration management, deployment, release management, and follow-up support.</li>
