--- a/app/Resume/resume.html
+++ b/app/Resume/resume.html
@@ -1,17 +1,9 @@
 ﻿<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lato" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
 
-<div class=panel-group style="background-color:#F5F3EE">
-<div title="Vikas Kumar Sharma" class="col-md-12 col-sm-12 col-lg-12 container-fluid unselectable panel" style="background-color:#F5F3EE">
-    
-	<div title="Contact" class="container-fluid border1 well bg-image">
+<div title="Vikas Kumar Sharma" class="col-md-12 col-sm-12 col-lg-12 container-fluid unselectable" style="background-color:#F5F3EE">
+    <div title="Contact" class="container-fluid border1 well bg-image">
         <div class="container-fluid padding-1 text-center">            
             <img src="/app/images/Vikas.jpg" height="200" width="200" class="img-circle img-responsive" style="display:inline" alt="Vikas">            
         </div>
@@ -31,20 +23,11 @@
         {{$ctrl.myResume}} -
         {{$ctrl.summary}} 
     </div>
-</div>
-    <div class=panel>
-	<div class=panel-heading>
-	<h4 class="panel-title">
-          <a data-toggle="collapse" href="#profilecollapse" target=_self class="text-center">Profile Summary</a>
-    </h4>
-	</div>
-	<div id="profilecollapse" class="panel-collapse collapse">
-	<div title-="Summary" class="row">
-        <!-- <div class="col-md-3 col-sm-3 col-lg-3 bg-leftpane1"> -->
-            <!-- <u>Profile Summary</u> -->
-        <!-- </div> -->
-        <!-- <div id="@demo" class="col-md-12 col-sm-12 col-lg-12 googlelato well-sm bg-3"> -->
-		<div id="@demo" class="googlelato well-sm bg-3">
+    <div title-="Summary" class="row">
+        <div class="col-md-3 col-sm-3 col-lg-3 bg-leftpane1">
+            <u>Profile Summary</u>
+        </div>
+        <div id="@demo" class="col-md-9 col-sm-9 col-lg-9 googlelato well-sm bg-3">
             <b>Develop creative application approaches by</b> blending analytical mindset, strong personable and leadership qualities, and lifelong passion for software solutions based on innovation and best practices that increase productivity, competitive edge, and cost effectiveness for both service providers and clients alike.
             <ul>
                 <li><b>Drive and lead cradle-to-grave software development lifecycles</b> including solution design, requirements validation, configuration management, deployment, release management, and follow-up support.</li>
@@ -55,9 +38,7 @@
                 <li><b>Recruit, lead, mentor, and influence</b> application development teams to achieve peak productivity and performance while providing opportunities for professional development and succession management.</li>
             </ul>   
         </div>
-    </div> 
-</div>	
-	</div>
+    </div>    
         <div title="Me" class="container-fluid row border1 bg-centertext3  text-center well-sm" style="color:brown">
             <em>Reputation as “people person who gets things done.” Adept at seeing point of view through other perspectives. Committed to ongoing professional and personal growth that supports high-quality deliverable performance.</em>
         </div>    
@@ -178,4 +159,4 @@
         </div>
     </div>
 </div>
-</div>
+
